--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,132 @@
-.App {
+:root {
+  --background-header-color: rgb(87, 180, 241);
+  --main-page-background: rgb(232, 251, 252);
+  --header-font-color: white;
+}
+
+html, body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: var(--main-page-background);
+}
+
+.app {
   text-align: center;
+  padding-top: 75px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Layout Styles */
+
+.header-close {
+  padding: 1% 6%;
+  background-color: var(--background-header-color);
+  height: 40px;
+  position: fixed;
+  width: 90%;
+  z-index: 2;
+  top: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-open {
+  padding: 1% 6%;
+  background-color: var(--background-header-color);
+  padding-bottom: 15px;
+  position: fixed;
+  width: 90%;
+  z-index: 2;
+  top: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-conatiner {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 5px;
+}
+
+.logo {
+  margin: 0;
+  padding: 0;
+  color: var(--header-font-color);
+  font-size: 25px;
+}
+
+.fabars {
+  display: block;
+  color: var(--header-font-color);
+  font-size: 20px;
+}
+
+.navigation-close {
+  display: none;
+}
+
+.navigation-open {
+  align-items: center;
+  color: var(--header-font-color);
+}
+
+/* NavBar Component style */
+.navigation {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-end;
 }
 
-.App-link {
-  color: #61dafb;
+.navigation > a {
+  padding: 5px 20px;
+  text-decoration: none;
+  color: var(--header-font-color);
+  font-size: 20px;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+
+
+/* This h1 is temporary */
+h1 {
+  padding-top: 60px;
+}
+
+@media only screen and (min-width: 800px) {
+  .header-close {
+    height: 40px;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .header-open {
+    height: 40px;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .nav-conatiner {
+    margin-top: 0;
+  }
+  
+  .fabars {
+    display: none;
+  }
+
+  .navigation-close {
+    display: flex;
+    align-items: center;
+    color: var(--header-font-color);
+  }
+  
+  .navigation-open {
+    display: flex;
+  }
+  
+  /* NavBar Component style */
+  .navigation {
+    flex-direction: row;
   }
 }
